[enhancement] Added units to the description-updater

--- a/src/app/presentation/components/generic/weight-display/weight-display.component.html
+++ b/src/app/presentation/components/generic/weight-display/weight-display.component.html
@@ -1,3 +1,5 @@
+<span *ngIf="weight">
 {{weight}}
 <span *ngIf="template.metaData.unit === unit.METRIC">{{'UNIT.METRIC.WEIGHT' | translate}}</span>
 <span *ngIf="template.metaData.unit === unit.IMPERIAL">{{'UNIT.METRIC.IMPERIAL' | translate}}</span>
+</span>
