[enhancement] Improved the weight-display.component

--- a/src/app/presentation/components/generic/weight-display/weight-display.component.html
+++ b/src/app/presentation/components/generic/weight-display/weight-display.component.html
@@ -1,5 +1,7 @@
-<span *ngIf="weight">
-{{weight}}
-<span *ngIf="template.metaData.unit === unit.METRIC">{{'UNIT.METRIC.WEIGHT' | translate}}</span>
-<span *ngIf="template.metaData.unit === unit.IMPERIAL">{{'UNIT.METRIC.IMPERIAL' | translate}}</span>
+<span
+  *ngIf="weight"
+  matTooltip="{{alternativeUnitValue}}">
+    {{weight}}
+  <span *ngIf="template.metaData.unit === unit.METRIC">{{'UNIT.METRIC.WEIGHT' | translate}}</span>
+  <span *ngIf="template.metaData.unit === unit.IMPERIAL">{{'UNIT.IMPERIAL.WEIGHT' | translate}}</span>
 </span>
