[enhancement] Added a HeightDisplayComponent

--- a/src/app/presentation/components/sheet/reusable/description/description.component.html
+++ b/src/app/presentation/components/sheet/reusable/description/description.component.html
@@ -38,7 +38,7 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HEIGHT' | translate }}</td>
-          <td>{{sheet.metaData.description.height}}</td>
+          <gurpsy-height-display [height]="sheet.metaData.description.height"></gurpsy-height-display>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.SIZE' | translate }}</td>
