--- a/src/app/presentation/sheet/reusable/description/description.component.html
+++ b/src/app/presentation/sheet/reusable/description/description.component.html
@@ -38,7 +38,7 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HEIGHT' | translate }}</td>
-          <gurpsy-height-display [height]="sheet.metaData.description.height"></gurpsy-height-display>
+          <gurpsy-height [height]="sheet.metaData.description.height"></gurpsy-height>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.SIZE' | translate }}</td>
