[refactor] Moved the Delete button to the about dialog

--- a/src/app/presentation/dialoges/generic/about-dialog/about-dialog.component.html
+++ b/src/app/presentation/dialoges/generic/about-dialog/about-dialog.component.html
@@ -10,6 +10,11 @@
        fxLayout="column">
     <div class="flex-item title"> {{'APPLICATION'| translate}}</div>
     <div class="flex-item version"> {{'VERSION'| translate}}</div>
+    <div class="flex-item delete">
+      <button mat-mini-fab color="warn" (click)="onDeleteSettings()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
 
