[enhancement] Improved appearance of the sideNavigation

--- a/src/app/presentation/components/side-navigation/_side-navigation.component.scss
+++ b/src/app/presentation/components/side-navigation/_side-navigation.component.scss
@@ -18,6 +18,12 @@
     }
 
     .sideNavigationContent {
+      .header {
+        span {
+          color: $hintText;
+        }
+      }
+
       button {
         md-icon {
           color: $hintText;
