--- a/src/app/presentation/components/side-navigation/side-navigation.component.html
+++ b/src/app/presentation/components/side-navigation/side-navigation.component.html
@@ -66,20 +66,38 @@
       </button>
     </div>
     <div class="library">
-      <button mat-button
-              (click)="onLibraryClick()"
-              [class.selected]="showLibrary"
-              class="sideNavigationButton">
-        <mat-icon svgIcon="books"></mat-icon>
-        <span fxFlex="100%">{{'SIDE_NAVIGATION.LIBRARY.GURPS_LITE'| translate}}</span>
-      </button>
+      <div class="header" (click)="showLibraryMenu = !showLibraryMenu">
+        <span>{{'SIDE_NAVIGATION.LIBRARY.LIBRARY'| translate}}</span>
+        <button mat-icon-button>
+          <mat-icon *ngIf="!showLibraryMenu">keyboard_arrow_left</mat-icon>
+          <mat-icon *ngIf="showLibraryMenu">keyboard_arrow_down</mat-icon>
+        </button>
+      </div>
+      <div class="content" *ngIf="showLibraryMenu">
+        <button mat-button
+                (click)="onLibraryClick()"
+                [class.selected]="showLibrary"
+                class="sideNavigationButton">
+          <mat-icon svgIcon="books"></mat-icon>
+          <span fxFlex="100%">{{'SIDE_NAVIGATION.LIBRARY.GURPS_LITE'| translate}}</span>
+        </button>
+      </div>
     </div>
     <div class="settings">
-      <mat-slide-toggle
-        (change)="onThemeChange()"
-        [(ngModel)]="nightTheme">
-        {{'DIALOG.SETTINGS.NIGHT_THEME'| translate}}
-      </mat-slide-toggle>
+      <div class="header" (click)="showSettingsMenu = !showSettingsMenu">
+        <span>{{'SIDE_NAVIGATION.SETTINGS.SETTINGS'| translate}}</span>
+        <button mat-icon-button>
+          <mat-icon *ngIf="!showSettingsMenu">keyboard_arrow_left</mat-icon>
+          <mat-icon *ngIf="showSettingsMenu">keyboard_arrow_down</mat-icon>
+        </button>
+      </div>
+      <div class="content" *ngIf="showSettingsMenu">
+        <mat-slide-toggle
+          (change)="onThemeChange()"
+          [(ngModel)]="nightTheme">
+          {{'SIDE_NAVIGATION.SETTINGS.NIGHT_THEME'| translate}}
+        </mat-slide-toggle>
+      </div>
     </div>
   </div>
 </div>
