[enhancement] Styling improvements for the sidenav

--- a/src/app/presentation/components/side-navigation/_side-navigation.component.scss
+++ b/src/app/presentation/components/side-navigation/_side-navigation.component.scss
@@ -19,6 +19,8 @@
 
     .sideNavigationContent {
       .header {
+        border-top: 1px solid $statusBar;
+
         span {
           color: $hintText;
         }
