[refactor] Cleaning up the messagebundle

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -76,7 +76,7 @@
           <mat-slide-toggle
             [checked]="theme == themeEnum.NIGHT">
           </mat-slide-toggle>
-          {{'SIDE_NAVIGATION.SETTINGS.NIGHT_THEME'| translate}}
+          {{'MENU.NIGHT_THEME'| translate}}
         </button>
         <button mat-menu-item (click)="onOpenAboutDialog()">
           <mat-icon svgIcon="gurpsy-face"></mat-icon>
