[fix] Fixed slider for the theme selection

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -74,7 +74,8 @@
         <button mat-menu-item
                 (click)="onThemeChange()">
           <mat-slide-toggle
-            [checked]="theme == themeEnum.NIGHT">
+            [checked]="theme == themeEnum.NIGHT"
+            (change)="onThemeChange()">
           </mat-slide-toggle>
           {{'MENU.NIGHT_THEME'| translate}}
         </button>
