[enhancement] Added a Closebutton to the BookViewerComponent

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -125,6 +125,7 @@
     <gurpsy-book-viewer
       class="flex-item"
       fxFlexAlign="start"
+      (onCloseBookViewer)="onShowLibrary($event)"
       *ngIf="showLibrary">
     </gurpsy-book-viewer>
     <gurpsy-sheet
