--- a/src/app/presentation/components/book-viewer/book-viewer.component.scss
+++ b/src/app/presentation/components/book-viewer/book-viewer.component.scss
@@ -1,10 +1,24 @@
 .bookViewer {
   .pdfViewer {
     display: block;
+    position: relative;
+    top: -58px;
   }
+
+  .closeButton {
+    position: sticky;
+    position: -webkit-sticky;
+    padding-right: 4px;
+    text-align: end;
+    z-index: 100;
+    top: 40px;
+  }
+
   .pdfControls {
     position: sticky;
+    position: -webkit-sticky;
     text-align: center;
+    z-index: 100;
     bottom: 2px;
   }
 }
