--- a/src/app/presentation/components/book-viewer/book-viewer.component.html
+++ b/src/app/presentation/components/book-viewer/book-viewer.component.html
@@ -9,28 +9,16 @@
               [page]="page"
               [zoom]="zoom"
               [original-size]="false"
-              (after-load-complete)="onPDFLoaded($event)"
+              [fit-to-page]="true"
               class="pdfViewer">
   </pdf-viewer>
 
   <div class="pdfControls">
-    <button mat-raised-button (click)="onFirst()">
-      <mat-icon>first_page</mat-icon>
-    </button>
-    <button mat-raised-button (click)="onDecrement()">
-      <mat-icon>chevron_left</mat-icon>
-    </button>
     <button mat-raised-button (click)="onZoomOut()">
       <mat-icon>zoom_out</mat-icon>
     </button>
     <button mat-raised-button (click)="onZoomIn()">
       <mat-icon>zoom_in</mat-icon>
-    </button>
-    <button mat-raised-button (click)="onIncrement()">
-      <mat-icon>chevron_right</mat-icon>
-    </button>
-    <button mat-raised-button (click)="onLast()">
-      <mat-icon>last_page</mat-icon>
     </button>
   </div>
 </div>
