--- a/src/app/presentation/template/update-advantages/update-advantages.component.html
+++ b/src/app/presentation/template/update-advantages/update-advantages.component.html
@@ -1,16 +1,16 @@
 <mat-table #table [dataSource]="dataSource">
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef> Name</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
     <mat-cell *matCellDef="let advantage"> {{advantage.name}}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="type">
-    <mat-header-cell *mdHeaderCellDef> Type</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
     <mat-cell *matCellDef="let advantage"> {{advantage.type}}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="reference">
-    <mat-header-cell *matHeaderCellDef> Reference</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Reference </mat-header-cell>
     <mat-cell *matCellDef="let advantage"> {{advantage.reference}}</mat-cell>
   </ng-container>
 
