--- a/src/app/presentation/template/update-advantages/update-advantages.component.html
+++ b/src/app/presentation/template/update-advantages/update-advantages.component.html
@@ -1,7 +1,7 @@
 <mat-table #table [dataSource]="dataSource">
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-    <mat-cell *matCellDef="let advantage"> {{advantage.name}}</mat-cell>
+    <mat-header-cell *matHeaderCellDef fxFlex="40"> Name </mat-header-cell>
+    <mat-cell *matCellDef="let advantage" fxFlex="40"> {{advantage.name}}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="type">
