[styling] Fiddling the styling of the sideNavigation

--- a/src/app/presentation/components/side-navigation/side-navigation.component.scss
+++ b/src/app/presentation/components/side-navigation/side-navigation.component.scss
@@ -1,9 +1,10 @@
 .mat-tab-group {
+  height: 100%;
 }
 
-///deep/ .mat-tab-body-wrapper {
-//  flex-grow: 1;
-//}
+/deep/ .mat-tab-body-wrapper {
+  flex-grow: 1;
+}
 
 
 
